crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_bad_tag.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { Foo }"
---
Tag(
    Name(
        1,
        11,
    ),
    1,
    11,
)
