crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_bad_tag_no_colon.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { expired }"
---
Tag(
    Name(
        1,
        11,
    ),
    1,
    11,
)
