crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_end.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { :a :b }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 9,
        },
        boundary: Position {
            line: 1,
            column: 13,
        },
        unexpected: Position {
            line: 1,
            column: 14,
        },
    },
)
