crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_group_empty.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error Never {}"
---
ErrorDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "Never",
    },
    tags: [],
}
