crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_group_trailing_comma.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error AuthError {\n    :invalid_token,\n    :expired(Timestamp),\n}\n"
---
ErrorDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 16,
            },
        },
        value: "AuthError",
    },
    tags: [
        TagVariant {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 19,
                    },
                },
                value: "invalid_token",
            },
            args: [],
        },
        TagVariant {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: "expired",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 14,
                        },
                        end: Position {
                            line: 3,
                            column: 23,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 14,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 23,
                                        },
                                    },
                                    value: "Timestamp",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ],
        },
    ],
}
