crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_no_name.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error { :a }"
---
Name(
    1,
    7,
)
