crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_open.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E :a"
---
Open(
    1,
    9,
)
