crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_tag_arg.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { :a(1) }"
---
Tag(
    Arg(
        Start(
            1,
            14,
        ),
        1,
        14,
    ),
    1,
    11,
)
